update favicon to govuk crown update header to to use govuk header update page titles to match govuk composition make delivery page title dynamic dependant on item type being ordered add accessibility link to footer update footer to show crown copyright update footer to include Built by companies house with link to ch site remove css style on footer which was causing alignment issues

--- a/static/footer.scss
+++ b/static/footer.scss
@@ -21,7 +21,6 @@ html, body {
 
 #footer {
   border-top: 10px solid #005ea5;
-  height: 60px;
 }
 
 .push {
